src/objects/pse__Assignment__c.object
<CustomObject>
    <fields>
        <fullName>pse__Scheduled_Hours__c</fullName>
        <formula>pse__Schedule__r.pse__Scheduled_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Show_Assignment_Methodologies_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Methodology field on the Time Entry page and Expense Entry page only lists assignment methodologies. When true, only assignment methodologies are shown. When false, the methodologies that belong to the project to which the assignment relates are shown. The default value is false.</description>
        <inlineHelpText>Indicates whether the Methodology field on the Time Entry page and Expense Entry page only lists assignment methodologies. When true, only assignment methodologies are shown. When false, the methodologies that belong to the related project are shown.</inlineHelpText>
        <label>Show Assignment Methodologies Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Assignment_Milestones_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Milestone field on the Time Entry page and Expense Entry page only lists assignment milestones. When true, only assignment milestones are shown. When false, the milestones that belong to the project to which the assignment relates are shown. The default value is false.</description>
        <inlineHelpText>Indicates whether the Milestone field on the Time Entry page and Expense Entry page only lists assignment milestones. When true, only assignment milestones are shown. When false, the milestones that belong to the project are shown.</inlineHelpText>
        <label>Show Assignment Milestones Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Assignment_Phases_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Phase field on the Time Entry page and Expense Entry page only lists assignment phases. When true, only assignment phases are shown. When false, the phases that belong to the project to which the assignment relates are shown. The default value is false.</description>
        <inlineHelpText>Indicates whether the Phase field on the Time Entry page and Expense Entry page only lists assignment phases. When true, only assignment phases are shown. When false, the phases that belong to the project to which the assignment relates are shown.</inlineHelpText>
        <label>Show Assignment Phases Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <formula>pse__Schedule__r.pse__Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Tentative</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pse__Suggested_Bill_Rate_Currency_Code__c</fullName>
        <label>Suggested Bill Rate Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Suggested_Bill_Rate_Number__c</fullName>
        <label>Suggested Bill Rate Number</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Suggested_Bill_Rate__c</fullName>
        <formula>pse__Suggested_Bill_Rate_Currency_Code__c &amp; &apos; &apos; &amp; TEXT(pse__Suggested_Bill_Rate_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suggested Bill Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Time_Credited__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox should be checked for non-billable Assignments for which hours are credited towards utilization.</description>
        <inlineHelpText>This checkbox should be checked for non-billable Assignments for which hours are credited towards utilization.</inlineHelpText>
        <label>Time Credited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Time_Excluded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox should be checked for non-billable assignments for which time should neither count for or against utilization.</description>
        <inlineHelpText>This checkbox should be checked for non-billable assignments for which time should neither count for or against utilization.</inlineHelpText>
        <label>Time Excluded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_External_Costs_In_Financials__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Timecard External Costs In Financials</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_External_Costs_Submitted__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Timecard External Costs Submitted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_Internal_Costs_In_Financials__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Timecard Internal Costs In Financials</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_Internal_Costs_Submitted__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Timecard Internal Costs Submitted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Use_Project_Currency_For_Resource_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Project Currency For Resource Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_Resource_Currency_For_Resource_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Resource Currency For Resource Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_Resource_Default_Cost_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Resource Default Cost Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_Resource_Default_Cost_Rate_as_Daily__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Resource Default Cost Rate as Daily</label>
        <type>Checkbox</type>
    </fields>
    <label>Assignment</label>
    <listViews>
        <fullName>My_Assignments</fullName>
        <columns>pse__Project__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>pse__Resource__c</columns>
        <columns>NAME</columns>
        <columns>pse__Role__c</columns>
        <columns>pse__Is_Billable__c</columns>
        <columns>pse__Bill_Rate__c</columns>
        <columns>pse__Cost_Rate__c</columns>
        <columns>pse__Start_Date__c</columns>
        <columns>pse__End_Date__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Assignments</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__Resource__c</columns>
        <columns>pse__Status__c</columns>
        <columns>pse__End_Date__c</columns>
        <columns>pse__Estimated_Time_To_Completion__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>pse__PSE_Member_Share__c</fullName>
        <label>PSE Member Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>pse__PSE_PM_Share__c</fullName>
        <label>PSE PM Share</label>
    </sharingReasons>
    <validationRules>
        <fullName>pse__Assignment_Currency_is_Constant</fullName>
        <active>true</active>
        <description>An Assignment&apos;s Currency field value may not be updated once set.</description>
        <errorConditionFormula>ISCHANGED(CurrencyIsoCode)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>An Assignment&apos;s Currency field value may not be updated once set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Assignment_May_Not_Be_Billable</fullName>
        <active>true</active>
        <description>An Assignment may only be marked &apos;Is Billable&apos; if it is for a Billable Project.</description>
        <errorConditionFormula>AND(pse__Is_Billable__c, NOT(ISNULL(pse__Project__c)), (pse__Project__c &lt;&gt; &apos;&apos;),  NOT(pse__Project__r.pse__Is_Billable__c))</errorConditionFormula>
        <errorDisplayField>pse__Is_Billable__c</errorDisplayField>
        <errorMessage>An Assignment may only be marked &apos;Is Billable&apos; if it is for a Billable Project.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Assignment_Project_is_Constant</fullName>
        <active>true</active>
        <description>An Assignment&apos;s Project field value may not be blank and may not be updated once set.</description>
        <errorConditionFormula>OR(ISNULL(pse__Project__c),LEN(pse__Project__c)=0,ISCHANGED(pse__Project__c))</errorConditionFormula>
        <errorDisplayField>pse__Project__c</errorDisplayField>
        <errorMessage>An Assignment&apos;s Project field value may not be blank and may not be updated once set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Assignment_Resource_is_Constant</fullName>
        <active>false</active>
        <description>An Assignment&apos;s Resource field value can not be changed.</description>
        <errorConditionFormula>ISCHANGED(pse__Resource__c)</errorConditionFormula>
        <errorDisplayField>pse__Resource__c</errorDisplayField>
        <errorMessage>An Assignment&apos;s Resource field value can not be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Assignment_Resource_is_Required</fullName>
        <active>false</active>
        <description>An Assignment&apos;s Resource field value may not be blank.</description>
        <errorConditionFormula>ISBLANK(pse__Resource__c)</errorConditionFormula>
        <errorDisplayField>pse__Resource__c</errorDisplayField>
        <errorMessage>An Assignment&apos;s Resource field value may not be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Bill_Rate_Required</fullName>
        <active>true</active>
        <description>This validation rule forces Bill Rate on Assignment to be required in effect, even if the Bill Rate field itself is eventually marked as NOT required to allow access limitations on it.</description>
        <errorConditionFormula>ISNULL(pse__Bill_Rate__c)</errorConditionFormula>
        <errorDisplayField>pse__Bill_Rate__c</errorDisplayField>
        <errorMessage>Assignment requires a Bill Rate.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Billable_Assignments_may_not_be_Credited</fullName>
        <active>true</active>
        <description>Assignments may only be marked as &quot;Time Credited&quot; if they are Non-Billable.</description>
        <errorConditionFormula>AND(pse__Is_Billable__c,pse__Time_Credited__c)</errorConditionFormula>
        <errorDisplayField>pse__Time_Credited__c</errorDisplayField>
        <errorMessage>Assignments may only be marked as &quot;Time Credited&quot; if they are Non-Billable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Billable_Assignments_may_not_be_Excluded</fullName>
        <active>true</active>
        <description>Assignments may only be marked as &quot;Time Excluded&quot; if they are Non-Billable.</description>
        <errorConditionFormula>AND(pse__Is_Billable__c,pse__Time_Excluded__c)</errorConditionFormula>
        <errorDisplayField>pse__Time_Excluded__c</errorDisplayField>
        <errorMessage>Assignments may only be marked as &quot;Time Excluded&quot; if they are Non-Billable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Credited_Assignments_may_not_be_Excluded</fullName>
        <active>true</active>
        <description>Assignments may not be marked as &quot;Time Excluded&quot; if they are also marked as &quot;Time Credited&quot;.</description>
        <errorConditionFormula>AND(pse__Time_Credited__c,pse__Time_Excluded__c)</errorConditionFormula>
        <errorDisplayField>pse__Time_Excluded__c</errorDisplayField>
        <errorMessage>Assignments may not be marked as &quot;Time Excluded&quot; if they are also marked as &quot;Time Credited&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Max_One_Default_Resource_Cost_Currency</fullName>
        <active>true</active>
        <description>At most one of the two override checkboxes may be set for which currency to hold Resource Cost Rates constant in - Resource or Project.  If neither is checked, the default config is used.</description>
        <errorConditionFormula>AND(pse__Use_Project_Currency_For_Resource_Cost__c,pse__Use_Resource_Currency_For_Resource_Cost__c)</errorConditionFormula>
        <errorMessage>At most one of the two override checkboxes may be set for which currency to hold Resource Cost Rates constant in - Resource or Project.  If neither is checked, the default config is used.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Non_Billable_Bill_Rate_must_be_Zero</fullName>
        <active>true</active>
        <description>Assignments marked non-billable may not have a bill rate greater than zero.</description>
        <errorConditionFormula>AND(NOT(pse__Is_Billable__c),NOT(pse__Bill_Rate__c = 0.0))</errorConditionFormula>
        <errorDisplayField>pse__Bill_Rate__c</errorDisplayField>
        <errorMessage>Assignments marked non-billable may not have a bill rate greater than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__cannot_switch_schedule_records</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(pse__Schedule__c)</errorConditionFormula>
        <errorDisplayField>pse__Schedule__c</errorDisplayField>
        <errorMessage>You cannot switch the schedule record once set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__select_resource</fullName>
        <active>true</active>
        <errorConditionFormula>( 
	ISNEW() 
	||
	ISCHANGED( pse__Resource__c) 
) 
&amp;&amp;  
( 
	NOT(pse__Resource__r.pse__Is_Resource__c) 
	||  
	NOT(pse__Resource__r.pse__Is_Resource_Active__c) 
)</errorConditionFormula>
        <errorDisplayField>pse__Resource__c</errorDisplayField>
        <errorMessage>You must select an active resource.</errorMessage>
    </validationRules>
</CustomObject>